04-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deploy
  namespace: ai-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: gautamsahil/ai-task-worker:ee3aba97375cf7a5e21cf1bcc4f31fc8eb31f777
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi" # Increased
            cpu: "100m"
          limits:
            memory: "512Mi" # Increased
            cpu: "500m"
