03-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: ai-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: gautamsahil/ai-task-backend:88d45fddfeffebad0f97f0118cdc5b89d63c4e48
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi" # Increased
            cpu: "100m"
          limits:
            memory: "512Mi" # Increased
            cpu: "300m"
        livenessProbe:
          httpGet:
            path: /health   # Changed from /api/tasks
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health   # Changed from /api/tasks
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: ai-platform
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
